# ray-tracing-in-one-week-rust

./: .gitattributes  Cargo.toml  run.sh
assets/result/: 10_2_snells_law.ppm  10_5_total_internal_reflection.ppm  11_1_camera_viewing_geometry.ppm  11_2_positioning_and_orienting_the_camera.ppm  12_2_generating_sample_rays.ppm  13_1_a_final_render.ppm  14_1_parallel.ppm  2_3_adding_a_progress_indicator.ppm  (+12 more)
benches/: ray_color.rs  world_hit.rs
examples/: 10_2_snells_law.rs  10_3_total_internal_reflection.rs  10_5_total_internal_reflection.rs  11_1_camera_viewing_geometry.rs  11_2_positioning_and_orienting_the_camera.rs  12_2_generating_sample_rays.rs  13_1_a_final_render.rs  14_1_parallel.rs  15_1_parallel_with_bvh.rs  2_1_the_ppm_image_format.rs  2_3_adding_a_progress_indicator.rs  3_3_color_utility_functions.rs  4_2_sending_rays_into_the_scene.rs  5_2_creating_or_first_raytraced_image.rs  6_1_shading_with_surface_normals.rs  6_2_simplifying_the_ray-shphere_intersection_code.rs  6_7_common_constants_and_utility_functions.rs  7_2_generating_pixels_with_multiple_samples.rs  8_1_a_simple_diffuse_material.rs  8_2_limiting_the_number_of_child_rays.rs  8_3_using_gamma_correction_for_accurate_color_intensity.rs  8_4_fixing_shadow_acne.rs  8_5_true_lambertian_reflection.rs  9_3_modeling_light_scatter_and_reflectance.rs  9_5_a_scene_with_metal_spheres.rs  9_6_fuzzy_reflection.rs  n_2_5_putting_everything_together.rs
src/: camera.rs  dielectric.rs  hit.rs  hit_objects.rs  lambertian.rs  lib.rs  material.rs  metal.rs  moving_sphere.rs  ray.rs  sphere.rs  vector3.rs
(+8 files in other folders)
