[package]
name = "ray-tracing-in-one-week-rust"
version = "0.1.0"
authors = ["Yuta Hinokuma <yuta.hinokuma725@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rayon = "1.5"
unwrap-ord = "0.1.1"
itertools = "0.10.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ray_color"
harness = false

[[bench]]
name = "world_hit"
harness = false
